docs(tapdata): streamline release documentation